// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar/> should render a large progress bar 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={40}
  className="slds-progress-bar slds-progress-bar_large"
  role="progressbar"
  style={undefined}
>
  <span
    className="slds-progress-bar__value"
    style={
      Object {
        "width": "40%",
      }
    }
  />
</div>
`;

exports[`<ProgressBar/> should render a progress bar with assistive text 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="slds-progress-bar slds-progress-bar_medium"
  role="progressbar"
  style={undefined}
>
  <span
    className="slds-progress-bar__value"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    <span
      className="slds-assistive-text"
    >
      Progress: 0%
    </span>
  </span>
</div>
`;
